# smart-contracts

./: .gitignore  LICENSE  README.md  deploy-rwa.sh  deploy-sepolia.sh  hardhat.config.js  package-lock.json  package.json  readme.txt  truffle-config.bsc.js  truffle-config.js
contracts/: BanNodes.sol  Migrations.sol  SimpleStorage.sol
contracts/escrow/: Common.sol  Escrow.sol  EscrowDesignLogic.md  EscrowSpec.md  IEscrow.sol  RwaMarketplace.sol  RwaMarketplaceDesign.md  ScriptHashCalculator.sol
contracts/escrow/deploy/: DeployGuide.md  RwaMarketplaceDeploy.sol
contracts/escrow/test/: RwaMarketplaceTest.sol
contracts/registry/: ContractManager.sol  ContractManagerSpec.md
contracts/rewards/: MGLRewards.sol  RewardsSpec.md
contracts/rwa-marketplace/: ExampleRWAToken.sol  IRWAToken.sol  MockUSDT.sol  README.md  RWAMarketplace.sol
contracts/rwa-marketplace/deploy/: DEPLOYMENT_GUIDE.md  RWAMarketplaceDeploy.sol  deploy-bsc.js  deploy-sepolia.js  deployment-sepolia.json  kyc-status-sepolia.json  set-kyc-status.js  test-deployment.js  verify-kyc-status.js  withdraw-eth.js
contracts/rwa-marketplace/test/: RWAMarketplaceTest.js  RWAMarketplaceTest.sol
contracts/token/: ITokenContract.sol  MBZToken.sol  MGLToken.sol  USDT.sol
migrations/: 2_Escrow_migration.js  4_MBZ_Token_migration.js  4_MGL_Token_migration.js  4_Rewards_Migration.js  5_Rewards_Migration.js  5_USDT_migration.js  6_ban_nodes.js
rwa_marketplace_backup_versions/RWAMarketplace_seller_charge/: ChainlinkPriceOracle.sol  README-Chainlink.md
rwa_marketplace_backup_versions/rwa-marketplace_backup/: ExampleRWAToken.sol  IRWAToken.sol  README.md  RWAMarketplace.sol
scripts/: deploy-contract-manager.js  deploy-escrow.js  generate_bindings.sh
solana/: Cargo.toml
solana/client/: go.mod
solana/client/escrow/: client.go  instruction.go
solana/client/test/: main_test.go  scenarios_test.go
solana/scripts/: deploy.sh  test.sh
solana/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
solana_anchor/: Anchor.toml  CONTRACT_MANAGER_README.md  Cargo.toml  config.json  devnet-config.js  escrow_program_summary.md  package-lock.json  package.json
solana_anchor/go-client/: contract_manager.go  example.go  go.mod  go.sum
solana_anchor/programs/contract-manager/: Cargo.toml
solana_anchor/programs/contract-manager/src/: error.rs  lib.rs  state.rs
solana_anchor/programs/contract-manager/src/instructions/: add_version.rs  initialize.rs  mark_recommended.rs  mod.rs  remove_recommended.rs  update_version.rs
solana_anchor/programs/escrow-program/: Cargo.toml  README.md  资金池方案.txt
solana_anchor/programs/escrow-program/src/: ed25519.rs  error.rs  lib.rs  state.rs  utils.rs
solana_anchor/programs/escrow-program/src/instructions/: deposit.rs  initialize.rs  initialize_pool.rs  initialize_sol.rs  initialize_sol_record.rs  initialize_token.rs  initialize_token_pool.rs  initialize_token_record.rs  mod.rs  release.rs  release_sol.rs  release_sol_record.rs  release_token.rs  release_token_record.rs  sign.rs
solana_anchor/scripts/: deploy-contract-manager.sh  deploy.sh  generate-keypairs.js  set-env.sh
solana_anchor/tests/: add-v1.0.1.js  contract-manager.js  escrow-program.js
(+8 files in other folders)
