[package]
name = "mobazha-escrow"
version = "0.1.0"
edition = "2021"
description = "Time-locked multi-signature transaction program"
authors = ["Mobazha"]

[features]
no-entrypoint = []

[dependencies]
solana-program-entrypoint = "2.2.0"
solana-program-error = "2.2.0"
solana-program-pack = "2.2.0"
solana-pubkey = { version = "2.2.0", features = ["bytemuck"] }
solana-account-info = "2.2.0"
solana-instruction = "2.2.0"
solana-program = "2.2.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "2.0"
arrayref = "0.3.9"
spl-token = "7.0.0"

[lib]
crate-type = ["cdylib", "lib"] 
