[package]
name = "contract-manager"
version = "0.1.0"
edition = "2021"
description = "Mobazha's Contract Version Manager for Solana programs"
authors = ["Mobazha"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mobazha_contract_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.0", features = ["init-if-needed"] }
anchor-spl = "=0.31.0"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
