[package]
name = "escrow-program"
version = "0.1.0"
edition = "2021"
description = "时间锁定多签名托管程序"
authors = ["Mobazha"]

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.31.0", features = ["init-if-needed"] }
anchor-spl = "=0.31.0"
# 如果你需要直接依赖solana-program，使用兼容版本
# solana-program = "=1.18.11"
