[package]
name = "escrow-program"
version = "0.1.0"
edition = "2021"
description = "时间锁定多签名托管程序"
authors = ["Mobazha"]

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.0", features = ["init-if-needed"] }
anchor-spl = "=0.31.0"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
solana-program = "2.2.1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
